[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.561279, 1.12883, 0, 0, 0, 0, 596.293, 4.51355, 0, 0, 0, 0, 600.394, 904.702, 0, 0, 0, 0, -0.414764, 906.753, 0, 0, 0, 0, -0.414764, 0.412468, 0, 0, 0, 0, -2.46533, 2.46301, 0, 0, 0, 0, -0.414764, 0.412468 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="BalloonsTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTImer" type="Timer" parent="."]

[node name="path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="pathSpawn" type="PathFollow2D" parent="path"]
position = Vector2( 0.561279, 1.12883 )
rotation = 0.0056816

[node name="StartTimer" type="Timer" parent="."]

[connection signal="timeout" from="BalloonsTimer" to="." method="_on_BalloonsTimer_timeout"]
[connection signal="timeout" from="ScoreTImer" to="." method="_on_ScoreTImer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
